--- a/views/podcasts.handlebars
+++ b/views/podcasts.handlebars
@@ -1,4 +1,4 @@
-    <body>
+    <div>
         <div class="podcast-title">
             {{podcast.title}}
         </div>
@@ -11,7 +11,7 @@
                    <a href="{{podcast.digital_location}}">Link to Podcast</a>
                 <u>
             </marquee>
-    </body>
+    </div>
       <div class="text-center button">
           <form action="podcast" method="get">
               <button type="submit" class="btn btn-primary gray-circle-button btn-mdb btn-raised btn-lg shuffle-btn" id="button">Hit Me Again</button>
