--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,9 +30,9 @@
         </div>
         </div>
       </div>
-      <body class="text-center">
+      <div class="text-center">
         <h4>Looking for a new podcast? Click the button to generate a new podcast at random.</h4>
-      </body>
+      </div>
       <div class="text-center">
       <form action="podcast" method="get">
       <button type="submit" class="btn btn-primary gray-circle-button btn-mdb btn-raised btn-lg shuffle-btn" id="button">Hit Me</button>
