--- a/public/main.css
+++ b/public/main.css
@@ -310,10 +310,16 @@ main a {
   height: 300px;
 }
 
+.image-content {
+  line-height: 45px;
+  position: relative;
+}
+
 .search-results-list {
   font-size: medium;
   font-weight: bold;
   line-height: 25px;
+  position: absolute;
 }
 
 .button {
